[gd_scene load_steps=6 format=3 uid="uid://bt6pt16lgqxeb"]

[ext_resource type="Script" uid="uid://cokaiqc4qe78v" path="res://Scripts/UI/pause.gd" id="1_goa2i"]
[ext_resource type="Shader" uid="uid://3p4nmix5j81u" path="res://Assets/shaders/blur.gdshader" id="2_a111y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ceew"]
shader = ExtResource("2_a111y")
shader_parameter/amount = 3.0000001425

[sub_resource type="Theme" id="Theme_ychus"]
default_font_size = 35

[sub_resource type="Theme" id="Theme_goa2i"]
default_font_size = 35

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goa2i")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2ceew")
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -89.5
offset_right = 200.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ychus")
text = "Resume"

[node name="Reset" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_ychus")
text = "Reset"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_goa2i")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
